--- a/3_Semantic-Textual-Similarity/3_Training/backup/backup-1.2.sbert-inference-develop.ipynb
+++ b/3_Semantic-Textual-Similarity/3_Training/backup/backup-1.2.sbert-inference-develop.ipynb
@@ -1585,6 +1585,252 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66211378",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# (실행 제외 합니다.) \n",
+    "5. Semantic Search (상품 리뷰)\n",
+    "\n",
+    "- 아래의 데이터 파일은 비공개이어서, 이 섹션은 실행은 제외 하세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00fac5b7",
+   "metadata": {},
+   "source": [
+    "## 5.1. 데이터 준비"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "af858582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_best_data_file = 'data/product_review/best_sample.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "69765674",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/product_review/best_sample.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-8af30298aabe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproduct_best_data_file\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mjson_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mbest_review_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/product_review/best_sample.json'"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(product_best_data_file) as json_file:\n",
+    "    best_review_data = json.load(json_file)\n",
+    "    \n",
+    "best_df = pd.DataFrame(best_review_data)\n",
+    "best_df.rename(columns={'contents' : 'doc'}, inplace=True)\n",
+    "best_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65e10bb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "pd.set_option('max_colwidth', 1000)\n",
+    "\n",
+    "from custom_util import preprocess_doc\n",
+    "\n",
+    "best_df_cl = preprocess_doc(best_df)\n",
+    "best_df_cl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c645969",
+   "metadata": {},
+   "source": [
+    "## 5.2. Corpus: 원문, Query : 원문"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "374ac26c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = best_df_cl['doc'].tolist()\n",
+    "corpus_pd_review_embeddings = encode_multi_gpu_embedding(model, corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67950a48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    \n",
+    "top_k = 3\n",
+    "\n",
+    "queries = [ '가격 : 할인가 개당 3,720원 (2개 이상 구입 필수) 양 : 1인분으로 평범한 양, \\\n",
+    "            점심에 먹는 것을 추천 조리시간 및 난이도 : 약 7분, 라면 끓이는 수준의 난이도 평가 : 시중에 파는 \\\n",
+    "            우동이 2천원대라는 점을 비교하면 3천원대로 나름 고급형 우동을 집에서 편하게 먹을 수 있어요. \\\n",
+    "            어묵 사이즈는 여성 손바닥 정도이고, 한장 크게 들어가있어서 먹으면서 잘라 먹거나 베어 먹으면 됩니다. \\\n",
+    "            국물과 어묵이 맛있어서 우동면 하나도 남기지 않고 다 먹었어요. \\\n",
+    "            고추우동이라서 살짝 매콤한가 했는데 전혀 맵지 않고 칼칼함도 없이 시원하고 짭쫄한 맛입니다. \\\n",
+    "            조리 방법은 뒷면에 상세하게 나와있어서 라면 끓일 줄 아는 분들이면 쉽게 따라할 수 있을거에요. \\\n",
+    "            저는 설명서에 다른 채소와 함께 끓이면 더 맛있다고 하여 알배기배추 작은 거 추가해줬더니 씹는 맛이 일품이네요. \\\n",
+    "            냉장고에 남는 채소 있으면 같이 끓이시는 것 추천! 맛있게 잘 먹었습니다 :)'\n",
+    "          ]\n",
+    "# queries = [Okt_tokenizer(queries[0])]\n",
+    "# queries\n",
+    "semantic_search(model, corpus, corpus_pd_review_embeddings, queries, top_k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff1567ef",
+   "metadata": {},
+   "source": [
+    "## 5.3. Corpus: 전처리, Query : 전처리, 토큰 (명사, 형용사)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac8f3edb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_cl = best_df_cl['doc_cl'].tolist()\n",
+    "corpus_pd_review_embeddings_cl = encode_multi_gpu_embedding(model, corpus_cl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "088e6d9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    \n",
+    "top_k = 3\n",
+    "\n",
+    "queries = [ '가격 : 할인가 개당 3,720원 (2개 이상 구입 필수) 양 : 1인분으로 평범한 양, \\\n",
+    "            점심에 먹는 것을 추천 조리시간 및 난이도 : 약 7분, 라면 끓이는 수준의 난이도 평가 : 시중에 파는 \\\n",
+    "            우동이 2천원대라는 점을 비교하면 3천원대로 나름 고급형 우동을 집에서 편하게 먹을 수 있어요. \\\n",
+    "            어묵 사이즈는 여성 손바닥 정도이고, 한장 크게 들어가있어서 먹으면서 잘라 먹거나 베어 먹으면 됩니다. \\\n",
+    "            국물과 어묵이 맛있어서 우동면 하나도 남기지 않고 다 먹었어요. \\\n",
+    "            고추우동이라서 살짝 매콤한가 했는데 전혀 맵지 않고 칼칼함도 없이 시원하고 짭쫄한 맛입니다. \\\n",
+    "            조리 방법은 뒷면에 상세하게 나와있어서 라면 끓일 줄 아는 분들이면 쉽게 따라할 수 있을거에요. \\\n",
+    "            저는 설명서에 다른 채소와 함께 끓이면 더 맛있다고 하여 알배기배추 작은 거 추가해줬더니 씹는 맛이 일품이네요. \\\n",
+    "            냉장고에 남는 채소 있으면 같이 끓이시는 것 추천! 맛있게 잘 먹었습니다 :)'\n",
+    "          ]\n",
+    "queries = [Okt_tokenizer(queries[0])]\n",
+    "queries\n",
+    "semantic_search(model, corpus, corpus_pd_review_embeddings, queries, top_k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5baa417",
+   "metadata": {},
+   "source": [
+    "## 5.4. Non-Best Review (???) - Corpus: 전처리, Query : 전처리, 토큰 (명사, 형용사)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "394920ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    \n",
+    "top_k = 3\n",
+    "\n",
+    "queries = [ '매콤어묵도 깔끔한 맛이에요']\n",
+    "queries = [Okt_tokenizer(queries[0])]\n",
+    "queries\n",
+    "semantic_search(model, corpus, corpus_pd_review_embeddings_cl, queries, top_k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8f8a833",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-26 13:23:02,886 - distributed.client - ERROR - Failed to reconnect to scheduler after 30.00 seconds, closing client\n"
+     ]
+    }
+   ],
+   "source": [
+    "    \n",
+    "top_k = 3\n",
+    "\n",
+    "queries = [ '한개가 간장소스가 다 터져서 문의글 남기면서 보니, \\\n",
+    "            간장 터져서 왔다는 글이 많이 보이네요. 맛있는데 불안해서 또 시킬 수 있을지 모르겠네요ㅜㅜ'\n",
+    "          ]\n",
+    "queries = [Okt_tokenizer(queries[0])]\n",
+    "queries\n",
+    "semantic_search(model, corpus, corpus_pd_review_embeddings_cl, queries, top_k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9db106fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f824e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf9a9343",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f98fe596",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b8af9623",
