--- a/3_Semantic-Textual-Similarity/2_Warming_Up/1.0.BERT_Tokenizer.ipynb
+++ b/3_Semantic-Textual-Similarity/2_Warming_Up/1.0.BERT_Tokenizer.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "0f449047-280d-461a-aaa8-4ffd83cfc90b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "83c517fa-61ff-45f3-a9a5-3d9ecbcff283",
    "metadata": {},
    "outputs": [],
@@ -109,7 +108,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_59337/3459640444.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'embeddings'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-4-4ef7a948935c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'embeddings'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m: 'embeddings'"
      ]
     }
@@ -382,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "370ba9cc-fa9d-489b-9328-c96ee7bcc22c",
    "metadata": {},
    "outputs": [],
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "34903668-7f47-41a4-ab8f-e47fab7319a0",
    "metadata": {},
    "outputs": [],
@@ -411,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a7a99062-a31e-44b5-82ac-feccf3beb1c4",
    "metadata": {},
    "outputs": [
@@ -421,7 +420,7 @@
        "['아', '배고픈', '##데', '짜장면', '먹', '##고', '##싶', '##다']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "e112ff59-3144-4c65-b722-5d7879976b3d",
    "metadata": {},
    "outputs": [
@@ -722,7 +721,7 @@
        " '*']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
